--- a/style.css
+++ b/style.css
@@ -139,7 +139,21 @@ div.fac p {
 
 section.left {
     padding: 2rem;
-    flex: 1 1 150px;
+    flex: 4 1 150px;
+}
+
+.group {
+    padding: 6rem 2rem;
+    display: block;
+    margin: auto;
+}
+
+div.group2 {
+    display: flex;
+}
+
+div.group2 p {
+    padding: 0.5rem 2.5rem;
 }
 
 @media screen and (max-width: 650px) {
